Working version
---------------

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

### Build system:

### Bug fixes:

OCaml 4.14.0
----------------

### Language features:

- #10462: Add attribute to produce a compiler error for polls.
  (Sadiq Jaffer, review by Mark Shinwell, Stephen Dolan
   and Guillaume Munch-Maccagnoni)

- #10437: Allow explicit binders for type variables.
  (Stephen Dolan, review by Leo White)

- #10441: Remove unnecessary parentheses surrounding immediate objects.
  Allow 'object ... end # f', 'f object ... end', etc.
  (Yan Dong, review by Nicolás Ojeda Bär, Florian Angeletti and Gabriel Scherer)

- #181, #9760: opt-in tail-modulo-cons (TMC) transformation
    let[@tail_mod_cons] rec map f li = ...
  (Frédéric Bour, Gabriel Scherer, Basile Clément,
   review by Basile Clément and Pierre Chambart,
   tested by Konstantin Romanov)

### Runtime system:

* #9391, #9424: Fix failed assertion in runtime due to ephemerons *set_* and
  *blit_* function during Mark phase
  (François Bobot, reported by Stephen Dolan, reviewed by Damien Doligez)

- #10195, #10680: Speed up GC by prefetching during marking
  (Stephen Dolan, review by Xavier Leroy, Guillaume Munch-Maccagnoni,
   Jacques-Henri Jourdan, Damien Doligez and Leo White)

- #10549: Stack overflow detection and naked pointers checking for ARM64
  (Xavier Leroy, review by Stephen Dolan)

* #10675: Emit deprecation warnings when old C runtime function names
  are used.  This will break C stub code that uses these old names and
  treats warnings as errors.  The workaround is to use the new names.
  (Xavier Leroy and David Allsopp, review by Sébastien Hinderer and
   Damien Doligez)

- #10698, #10726: Free the alternate signal stack when the main OCaml
   code or an OCaml thread stops