@@ -511,6 +511,10 @@ let mk_safe_string f =
   else " Make strings immutable"
 ;;
 
+let mk_safer_matching f =
+  "-safer-matching", Arg.Unit f,
+  " Do not use type information to optimize pattern-matching"
+
 let mk_shared f =
   "-shared", Arg.Unit f, " Produce a dynlinkable plugin"
 ;;
@@ -930,6 +934,7 @@ module type Common_options = sig
   val _rectypes : unit -> unit
   val _no_rectypes : unit -> unit
   val _safe_string : unit -> unit
+  val _safer_matching : unit -> unit
   val _short_paths : unit -> unit
   val _strict_sequence : unit -> unit
   val _no_strict_sequence : unit -> unit
@@ -1226,6 +1231,7 @@ struct
     mk_with_runtime F._with_runtime;
     mk_without_runtime F._without_runtime;
     mk_safe_string F._safe_string;
+    mk_safer_matching F._safer_matching;
     mk_short_paths F._short_paths;
     mk_strict_sequence F._strict_sequence;
     mk_no_strict_sequence F._no_strict_sequence;
@@ -1301,6 +1307,7 @@ struct
     mk_rectypes F._rectypes;
     mk_no_rectypes F._no_rectypes;
     mk_safe_string F._safe_string;
+    mk_safer_matching F._safer_matching;
     mk_short_paths F._short_paths;
     mk_stdin F._stdin;
     mk_strict_sequence F._strict_sequence;
@@ -1428,6 +1435,7 @@ struct
     mk_without_runtime F._without_runtime;
     mk_S F._S;
     mk_safe_string F._safe_string;
+    mk_safer_matching F._safer_matching;
     mk_shared F._shared;
     mk_short_paths F._short_paths;
     mk_strict_sequence F._strict_sequence;
@@ -1547,6 +1555,7 @@ module Make_opttop_options (F : Opttop_options) = struct
     mk_remove_unused_arguments F._remove_unused_arguments;
     mk_S F._S;
     mk_safe_string F._safe_string;
+    mk_safer_matching F._safer_matching;
     mk_short_paths F._short_paths;
     mk_stdin F._stdin;
     mk_strict_sequence F._strict_sequence;
@@ -1720,6 +1729,7 @@ module Default = struct
     let _principal = set principal
     let _rectypes = set recursive_types
     let _safe_string = clear unsafe_string
+    let _safer_matching = set safer_matching
     let _short_paths = clear real_paths
     let _strict_formats = set strict_formats
     let _strict_sequence = set strict_sequence
