@@ -92,6 +92,7 @@ val all_ccopts : string list ref
 val classic : bool ref
 val nopervasives : bool ref
 val match_context_rows : int ref
+val safer_matching : bool ref
 val open_modules : string list ref
 val preprocessor : string option ref
 val all_ppx : string list ref
