@@ -7,6 +7,13 @@ Working version
 
 ### Code generation and optimizations:
 
+- #???: The -safer-matching option disables type-based optimizations of
+  pattern-matching compilation. This allows to produce a match failure if
+  a pattern-matching was wrongly assumed to be exhaustive. Since the
+  exhaustiveness check for GADTs has had bugs in the past, it may be
+  useful if you need extra security with GADTs.
+  (Jacques Garrigue)
+
 ### Standard library:
 
 ### Other libraries:
